<?xml version="1.0" encoding="utf-8"?>

<!--CSCI 4176: Mobile Computing Group Project-->
<!--Group #9-->

<!--This is the XML file that defines the layout for the Search Page-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SearchPage">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"
        android:backgroundTint="@color/White"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/logo1" />


                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/headerText"
                    android:textColor="@color/White"
                    android:textSize="22sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/Cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:id="@+id/costField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/costText"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/CostButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Cost"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <LinearLayout
                    android:id="@+id/allButtons"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/anyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/basic_button"
                        android:text="@string/priceAny"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/freeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/basic_button"
                        android:text="@string/priceFree"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/cheapButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/basic_button"
                        android:text="@string/priceLow"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/mediumButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/basic_button"
                        android:text="@string/priceMedium"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/expensiveButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/basic_button"
                        android:text="@string/priceHigh"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ActivityType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CostButtons"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:id="@+id/activityField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activityText"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ActivitySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ActivityType"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <Spinner
                    android:id="@+id/activityTypes"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    style="@style/Widget.App.Spinner"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ActivitySpinner"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:id="@+id/distanceField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distanceText"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </RelativeLayout>

            <RelativeLayout
            android:id="@+id/DistanceSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Distance"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

                <Spinner
                    android:id="@+id/distance"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    style="@style/Widget.App.Spinner"/>

            </RelativeLayout>

            <Button
                android:id="@+id/searchButton"
                android:layout_below="@+id/DistanceSpinner"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorSecondary"
                android:text="@string/search"
                android:textColor="@color/White"
                android:textSize="18sp"
                android:layout_marginRight="40dp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>