<?xml version="1.0" encoding="utf-8"?>
<!--CSCI 4176: Mobile Computing Group Project-->
<!--Group #9-->

<!--This is the XML file that defines the layout of the LoginActivity-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoView"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                app:srcCompat="@drawable/logo1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="115sp"
                >

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/White"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="@color/White"
                    android:backgroundTint="@color/White"
                    android:singleLine="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/White"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="@color/White"
                    android:backgroundTint="@color/White"

                    android:singleLine="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Registration"
                    style="@android:style/Widget.Button.Inset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorSecondary"
                    android:text="@string/registerButton"
                    android:textColor="@color/White"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/SignInButton"
                    style="@android:style/Widget.DeviceDefault.Button.Inset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorSecondaryDark"
                    android:text="@string/signInButton"
                    android:textSize="16sp"
                    android:textColor="@color/White"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>