<?xml version="1.0" encoding="utf-8"?>

<!--CSCI 4176: Mobile Computing Group Project-->
<!--Group #9-->

<!--This is the XML file that defines the layout for the Search Page-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegistrationActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"
        android:background="@drawable/basic_border"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/logo1" />


                <TextView
                    android:id="@+id/Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/registerationHeader"
                    android:textColor="@color/White"
                    android:textSize="22sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/usernameField"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/primaryTextField"
                    android:hint="@string/usernameHint"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Username"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/primaryTextField"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Password"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/confirmField"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/primaryTextField"
                    android:hint="@string/confirmHint"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ConfirmPassword"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText

                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/primaryTextField"
                    android:hint="@string/emailHint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>


            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Email"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/secondary_button"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/registerButton"
                android:textColor="@color/White"
                android:textSize="18sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerButton"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/colorSecondaryDark"
                android:text="@string/loginHereButton"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="12sp" />


        </RelativeLayout>
        

    </android.support.v7.widget.CardView>
    
    <ProgressBar
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    




</RelativeLayout>