<?xml version="1.0" encoding="utf-8"?>
<!--CSCI 4176: Mobile Computing Group Project-->
<!--Group #9-->

<!--This is the XML file that defines our implementation of Google Maps that users see as soon as they log in-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <!--This fragment is used to define the search bar at the top of the Map-->
    <fragment
        android:id="@+id/place_search"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="1.0"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@id/place_search"
        map:layout_constraintVertical_bias="1.0"
        tools:context=".MapsActivity" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rect_button"
        android:clickable="true"
        android:elevation="5dp"
        android:onClick="findActivities"
        android:text="@string/btn_search"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSuggest"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rect_button"
        android:clickable="true"
        android:elevation="5dp"
        android:onClick="SuggestActivities"
        android:text="@string/btn_suggest"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/warnLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWarning"
        android:padding="16dp"
        android:text="@string/location_warning"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Subtitle"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loadScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background"
        android:elevation="99dp"
        android:gravity="bottom"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="64dp"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>